# cnn_cpu

./: .gitignore  CMakeLists.txt  README.md  cnn_reference_test.cpp
net/: CMakeLists.txt
source/: cnn_reference_test.cpp
source/net/layers/inc/: ConvolutionalLayer.h
source/net/layers/src/: ConvolutionalLayer.cpp
src/: CMakeLists.txt
src/net/: Network.cpp  Network.h
src/net/activation/inc/: ActivationFunction.h  ReluActivation.h  SigmoidActivation.h
src/net/activation/src/: ReluActivation.cpp  SigmoidActivation.cpp
src/net/cost/inc/: CostFunction.h  CrossEntropyCost.h  QuadraticCost.h
src/net/cost/src/: CrossEntropyCost.cpp  QuadraticCost.cpp
src/net/layers/: ConvolutionalLayer.cpp  ConvolutionalLayer.h  CrossEntropyLossLayer.cpp  CrossEntropyLossLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  Layer.h  MaxPoolingLayer.cpp  MaxPoolingLayer.h  QuadraticLossLayer.cpp  QuadraticLossLayer.h  ReluLayer.cpp  ReluLayer.h  SigmoidLayer.cpp  SigmoidLayer.h  SoftmaxLayer.cpp  SoftmaxLayer.h
src/net/layers/inc/: ConvolutionalLayer.h  FullyConnectedLayer.h  Layer.h  MaxPoolLayer.h  ReluLayer.h  SigmoidLayer.h  SoftmaxLayer.h
src/net/layers/src/: ConvolutionalLayer.cpp  FullyConnectedLayer.cpp  MaxPoolLayer.cpp  ReluLayer.cpp  SigmoidLayer.cpp  SoftmaxLayer.cpp
src/utils/: Image.cpp  Image.h  MnistDataLoader.cpp  MnistDataLoader.h
src/utils/inc/: Image.h  MnistDataLoader.h
src/utils/src/: Image.cpp  MnistDataLoader.cpp
tests/: CMakeLists.txt  layer_tests.cpp
tests/layer_tests/: CMakeLists.txt  layer_tests.cpp
tests/unit_tests/: CMakeLists.txt  activationFunctionTests.cpp  layer_tests.cpp
